# review-everything-desktop

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: download-difft.sh
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  difft.rs  git.rs  integrity.rs  lib.rs  main.rs  processor.rs  review.rs  types.rs
src/lib/: ipc.ts  keyboard.ts  platform.ts  theme.ts  types.ts
src/lib/components/: CollapsedTreeStrip.svelte  CompareView.svelte  DiffFindBar.svelte  DiffLine.svelte  DiffPane.svelte  DiffScrollbar.svelte  DiffView.svelte  HelpOverlay.svelte  LogView.svelte  RepoPickerView.svelte  SearchOverlay.svelte  StatusBar.svelte  Toast.svelte  TopBar.svelte  TreePane.svelte
src/lib/stores/: app.svelte.ts
src/routes/: +page.svelte
