[package]
name = "review-everything-desktop"
version = "0.8.0"
description = "Desktop diff viewer powered by difftastic"
authors = ["pablosgraduation"]
license = "MIT"
edition = "2024"

[lib]
name = "review_everything_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1"
sha2 = "0.10"
tempfile = "3"
smallvec = { version = "1", features = ["serde"] }
